If rootdev is set, use it as currdev.

Setting rootdev in the enviornment should specify things
completely. If it is set, then have it override everything else.

PR: 229770
Differential Review: https://reviews.freebsd.org/D16322


git-svn-id: svn+ssh://svn.freebsd.org/base/head@336463 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f